# AI-RAN-on-NPU

./: LICENSE  README.md  gitignore
ai_ran_npu_ascend_baseband_310b1_rx/: CMakeLists.txt  capture_usrp.py  demo_rx_intermediate.py  pybind11.cpp  rx_usrp_npu.py
ai_ran_npu_ascend_baseband_310b1_rx/kernels/: cfo_compensate.cpp  data_extract_mm.cpp  fft_postproc.cpp  qam64_demod.cpp
ai_ran_npu_ascend_baseband_310b1_rx/scripts/: gen_matrices.py
ai_ran_npu_ascend_baseband_310b1_rx/tiling/: ldpc_decode_tiling.cpp  ofdm_fft_tiling.cpp  rrc_downsample_tiling.cpp
ai_ran_npu_ascend_baseband_310b1_tx/: pybind11.cpp  tx_usrp_npu.py
ai_ran_npu_ascend_baseband_310b1_tx/kernels/: ifft_postproc.cpp  ldpc_encode.cpp  ofdm_ifft.cpp  qam64_modulation.cpp  up_sample_rrc.cpp
ai_ran_npu_ascend_baseband_310b1_tx/tiling/: ldpc_encode_tiling.cpp
ascend_baseband_310b1_rx/: README.md  run_pybind.sh  rx_usrp_npu.py
ascend_baseband_310b1_rx/cmake/: cpu_lib.cmake  npu_lib.cmake
ascend_baseband_310b1_rx/kernels/: extract_subcarriers.cpp  fine_sync.cpp  ldpc_decode.cpp  ls_equalizer.cpp  ofdm_fft.cpp  rrc_downsample.cpp
ascend_baseband_310b1_rx/tiling/: data_extract_mm_tiling.cpp  ls_equalizer_tiling.cpp
ascend_baseband_310b1_tx/: CMakeLists.txt  README.md  run_pybind.sh  tx_bits.npy  tx_usrp_npu.py
ascend_baseband_310b1_tx/tiling/: ofdm_ifft_tiling.cpp  up_sample_rrc_tiling.cpp
